2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/GradientBarPainter.java
    (paintBar): Use outline paint,
    (paintBarShadow): Use shadow paint,
    * source/org/jfree/chart/renderer/category/StandardBarPainter.java
    (paintBarShadow): Use shadow paint.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (clearSeriesPaints): New method,
    (clearSeriesStrokes): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (clearSectionPaints): New method,
    (clearSectionOutlinePaints): Likewise,
    (clearSectionOutlineStrokes): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/SymbolAxis.java
    (drawGridBandsHorizontal): Use gridBandAlternatePaint,
    (drawGridBandsVertical): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (getRendererCount): New method,
    * source/org/jfree/chart/plot/XYPlot.java
    (getRendererCount): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/LegendTitle.java
    (getWrapper): New method.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/Plot.java
	(setDrawingSupplier(DrawingSupplier, boolean)): New method.

2008-08-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BarRenderer.java
    (shadowPaint): New field,
    (getShadowPaint): New method,
    (setShadowPaint): Likewise,
    (equals): Updated for new field,
    (writeObject): For serialization,
    (readObject): Likewise.

2008-08-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java